tests/expected_invalid_parse_missing_field_type.diag.out
<input>:4:1: error: expected field type after ':'
    }
    ^
<input>:7:21: error: expected field type after ':'
        Broken { value: }
                        ^
<input>:12:1: error: expected field type after ':'
    }
    ^
<input>:17:5: error: expected field type after ':'
        }
        ^
